--- a/src/app/components/bar-component/bar-component.component.html
+++ b/src/app/components/bar-component/bar-component.component.html
@@ -1,7 +1,7 @@
 
 <div class="flex wrapper-bar">
     <div class="box-amount" [ngClass]="mostrarAmount()">
-        <span class="text-white fw-bold"> ${{gasto.amount}}</span>
+        <span class="text-white fw-bold fs-200"> ${{gasto.amount}}</span>
     </div>
     <div id="bar{{indice}}" 
          class="bar" 
