--- a/src/styles.sass
+++ b/src/styles.sass
@@ -121,15 +121,17 @@ app-expenses-component
 
 .bar
     background-color: $bg-primary
-    width: 40px
+    width: 30px
     border-top-right-radius: 4px
     border-top-left-radius: 4px
+    @media (min-width: 768px)
+        width: 38px
     &:hover
         background-color: $bg-primary-light    
     
 
 .wrapper-bars
-    gap: 8px
+    
     align-items: flex-end
     justify-content: center
     @media (min-width: 768px)
@@ -139,12 +141,16 @@ app-expenses-component
 .wrapper-bar
     flex-direction: column
     align-items: center
+    min-width: 42px
     gap: 8px
+
 
 .box-amount
     background-color: $text-accent
-    padding: 6px
+    padding: 3px
     border-radius: 4px
+    @media (min-width: 768px)
+        padding: 6px
 
 .no-visible
     display: none
